chore: added tests
Refs: #285